Run transformer as subprocess